--- a/Web Middle Maker Time/index.html
+++ b/Web Middle Maker Time/index.html
@@ -8,7 +8,7 @@
     <!-- Підключення стилів -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Weather</title>
   </head>
   <body>
     <!-- Підключення FontAwesome для використання текстових іконок -->
