--- a/Web Middle Maker Time/index.html
+++ b/Web Middle Maker Time/index.html
@@ -17,6 +17,10 @@
       integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
       crossorigin="anonymous"
     ></script>
+    <h1>Перевір погоду</h1>
+  <input type="text" id="cityInput" placeholder="Введіть місто">
+  <button onclick="getWeather()">Показати</button>
+  <div id="weather"></div>
 
     <!-- Підключення локального скрипта -->
     <script src="script.js"></script>
