--- a/Web Middle Maker Time/index.html
+++ b/Web Middle Maker Time/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Підключення стилів -->
-    <link rel="stylesheet" href="style.css" />
-
-    <title>Weather44444</title>
-  </head>
-  <body>
-    <!-- Підключення FontAwesome для використання текстових іконок -->
-    <script
-      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-      integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
-      crossorigin="anonymous"
-    ></script>
-    <h1>Перевір погоду</h1>
-  <input type="text" id="cityInput" placeholder="Введіть місто">
-  <button onclick="getWeather()">Показати</button>
-  <div id="weather"></div>
-
-    <!-- Підключення локального скрипта -->
-    <script src="script.js"></script>
-  </body>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8">
+  <title>Погода онлайн</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Дізнайся погоду</h1>
+    <input type="text" id="cityInput" placeholder="Введіть місто">
+    <button onclick="getWeather()">Показати</button>
+    <div id="weather"></div>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
+
