--- a/Web Middle Maker Time/index.html
+++ b/Web Middle Maker Time/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <title>Погода онлайн</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Погода</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Дізнайся погоду</h1>
-    <input type="text" id="cityInput" placeholder="Введіть місто">
-    <button onclick="getWeather()">Показати</button>
-    <div id="weather"></div>
-  </div>
-  <script src="script.js"></script>
+    <div class="weather-app">
+        <h1>Дізнайся погоду</h1>
+        <div class="search-box">
+            <input type="text" id="city-input" placeholder="Введіть місто">
+            <button id="search-button">Пошук</button>
+        </div>
+        <div class="weather-display" id="weather-display">
+            <p>Введіть місто, щоб дізнатися погоду.</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
 
