--- a/Web Middle Maker Time/index.html
+++ b/Web Middle Maker Time/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="weather-app">
-        <h1>Дізнайся погоду</h1>
+    <div class="weather-app" id="weatherContainer"> <h1>Дізнайся погоду</h1>
         <div class="search-box">
             <input type="text" id="city-input" placeholder="Введіть місто">
             <button id="search-button">Пошук</button>
@@ -16,9 +15,11 @@
         <div class="weather-display" id="weather-display">
             <p>Введіть місто, щоб дізнатися погоду.</p>
         </div>
+        <div id="rainLayer" class="weather-layer"></div>
+        <div id="snowLayer" class="weather-layer"></div>
+        <p id="weatherLabel" style="display: none;"></p> 
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
