--- a/Web Middle Maker Time/index.html
+++ b/Web Middle Maker Time/index.html
@@ -27,7 +27,10 @@
         </div>
         <div id="rainLayer" class="weather-layer"></div>
         <div id="snowLayer" class="weather-layer"></div>
-        </div>
+    </div>
+    <audio id="rainSound" loop>
+        <source src="rain-sound-188158.mp3" type="audio">
+    </audio>
 
     <script src="script.js"></script>
 </body>
